k8s-raw/sample-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqldb
  labels:
    app.kubernetes.io/name: mysqldb
    app.kubernetes.io/instance: mysqldb-dev
spec:
  replicas: 1
  serviceName: mysqldb
  selector:
    matchLabels:
      app.kubernetes.io/name: mysqldb
      app.kubernetes.io/instance: mysqldb-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mysqldb
        app.kubernetes.io/instance: mysqldb-dev
    spec:
      containers:
        - name: mysqldb-server
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: mongo
              containerPort:  3306
              protocol: TCP
          volumeMounts:
            - name: pvc-data-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: pvc-data-volume
          persistentVolumeClaim:
            claimName: mysqldb-pvc-data
      imagePullSecrets: []
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  labels:
    app.kubernetes.io/name: mysqldb
    app.kubernetes.io/instance: mysqldb-dev
spec:
  type: LoadBalancer
  ports:
    - name: mysql
      port: 8080
      targetPort: 3306
      protocol: TCP
  selector:
    app.kubernetes.io/name: mysqldb
    app.kubernetes.io/instance: mysqldb-dev
