k8s-raw/pod-info.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-info
  labels:
    app.kubernetes.io/name: pod-info
    app.kubernetes.io/instance: pod-info-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pod-info
      app.kubernetes.io/instance: pod-info-dev
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: pod-info
        app.kubernetes.io/instance: pod-info-dev
    spec:
      imagePullSecrets:
        - name: registry-frontiir-net
      securityContext:
        {}
      containers:
        - name: pod-info
          securityContext:
            {}
          image: devdocker-repo.frontiir.net/zaw.z.thein/pod-info:demo
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5005
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pod-info
  labels:
    app.kubernetes.io/name: pod-info
    app.kubernetes.io/instance: pod-info-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5005
      protocol: TCP
  selector:
    app.kubernetes.io/name: pod-info
    app.kubernetes.io/instance: pod-info-dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-info
  labels:
    app.kubernetes.io/name: pod-info
    app.kubernetes.io/instance: pod-info-dev
  annotations: {}
spec:
  ingressClassName: traefik
  rules:
    - host: pod-info-dev.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pod-info
                port:
                  name: http
  tls:
    - hosts:
        - pod-info-dev.frontiir.net
      secretName: tls-frontiir-net-godaddy-cert
