k8s-raw/registry-frontiir-net.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webserver
  namespace: dev
  labels:
    app: nginx-webserver
    env: local-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-webserver
      env: local-dev
  template:
    metadata:
      labels:
        app: nginx-webserver
        env: local-dev
    spec:
      containers:
        - name: nginx-nonroot-server
          image: devdocker-repo.frontiir.net/container-images/nginx:nonroot-stable
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: registry-frontiir-net
      
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-webserver
  namespace: dev
  labels:
    app: nginx-webserver
    env: local-dev
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: nginx-webserver
    env: local-dev

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-webserver
  namespace: dev
  labels:
    app: nginx-webserver
    env: local-dev
spec:
  ingressClassName: traefik
  rules:
    - host: nginx-server-example.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-webserver
                port:
                  name: http
  tls:
    - hosts:
        - nginx-server-example.frontiir.net
      secretName: tls-frontiir-net-godaddy-cert
